Fix some specificity issues. Slight spacing tweaks. Fix dnd5e-checkbox height.

--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -847,7 +847,7 @@
     }
     .header {
       margin-inline: -10px;
-      padding-block: 2px;
+      padding-block: 3px 2px;
       padding-inline: 10px;
       border-radius: 0;
     }
